<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2014 Guimi
    http://guimi.net

-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/main_menu_Configuracion"
        android:orderInCategory="40"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_configuracion_g"
        android:title="@string/main_menu_configuracion"/>
    <item
        android:id="@+id/main_menu_Ayuda"
        android:orderInCategory="45"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_ayuda_g"
        android:title="@string/main_menu_ayuda"/>
    <item
        android:id="@+id/main_menu_Info"
        android:orderInCategory="50"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_info_g"
        android:title="@string/main_menu_info"/>
    
</menu>
