<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2014 Guimi
    http://guimi.net

-->
<!-- Indicamos el tipo de distribución
    Asignamos un identificador (para poder referirnos a él en el código)
    Indicamos que utilice todo el ancho y alto disponible
-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="left"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    >
    
    <TextView
        android:id="@+id/main_txtElijeFuncion"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textSize="23sp"
        android:text="@string/elije_funcion"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        />    
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        >

        <!--         android:layout_below="@id/main_txtElijeFuncion"
         -->
    <TextView android:id="@+id/main_txtEmisor"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textSize="17sp"
        android:text="@string/primo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="6dp"
        />
    <Button
        android:id="@+id/main_btPrimo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/primo"
        android:onClick="metodoPrimo"
        android:layout_below="@id/main_txtEmisor"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="6dp"
        />
    
    
    <Button
        android:id="@+id/main_btWFD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/hacia"
        android:onClick="metodoWFD"
        android:layout_below="@id/main_txtEmisor"
        android:layout_toRightOf="@+id/main_btPrimo"
        android:layout_marginLeft="6dp"
        />

    
    <TextView android:id="@+id/main_txtMando"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textSize="17sp"
        android:text="@string/mando"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/main_btWFD"
        android:layout_marginLeft="6dp"
        />
    <Button
        android:id="@+id/main_btReceptor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/mando"
        android:onClick="metodoReceptor"
        android:layout_below="@id/main_txtMando"
        android:layout_toRightOf="@+id/main_btWFD"
        android:layout_marginLeft="6dp"
        />    

    </RelativeLayout>
    
    <TextView
        android:id="@+id/main_Web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web_url"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />

    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:src="@drawable/guimi_firma" />
    
</RelativeLayout>